# solar-system-opengl

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: CelestialBody.hpp  DisplayMode.hpp  LightPoint.hpp  Planet.hpp  Sphere.hpp  Texture.hpp  Vector3f.hpp  Vertex.hpp  Viewer.hpp  main.hpp
src/: CelestialBody.cpp  LightPoint.cpp  Planet.cpp  Sphere.cpp  Texture.cpp  Vector3f.cpp  Vertex.cpp  Viewer.cpp  main.cpp
